--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ h1, h2, h3, h4, h5, p, ul {
     background-image: url('../images/banner-bg.jpg');
     background-color: #666666;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: center top;
     box-sizing: border-box;
     background-size: cover;
     color: #ffffff;
@@ -100,6 +100,10 @@ h1, h2, h3, h4, h5, p, ul {
 .logo {
     width: 179px;
     margin-left: 3px; 
+}
+
+.mobile-logo {
+    display: none;
 }
 
 .menu-list {
@@ -206,6 +210,7 @@ h1, h2, h3, h4, h5, p, ul {
 }
 
 .trend-container {
+    flex-grow: 1;
     width: 365px;
     border: 3px solid rgba(181, 159, 91, 0.5);
     padding: 34px 31px 32px 31px;
@@ -214,7 +219,9 @@ h1, h2, h3, h4, h5, p, ul {
 .trend-tags {
     display: flex;
     gap: 20px;
+    row-gap: 5px;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: start;
 }
 
@@ -226,13 +233,21 @@ h1, h2, h3, h4, h5, p, ul {
     text-transform: uppercase;
 }
 
-article h3.trend-title {
+.trend-tag:hover {
+    text-decoration: underline;
+}
+
+.trend-title {
     color: #ffffff;
     font-weight: bold;
     font-size: 20px;
     text-transform: uppercase;
     padding-top: 5px;
     line-height: 1.25;
+}
+
+.trend-title:hover {
+    color: #b59f5b;
 }
 
   /* Стили для main и aside */
@@ -247,13 +262,18 @@ article h3.trend-title {
 }
 
 .main-content {
+    display: flex;
+    flex-direction: column;
     width: 778px;
 }
 
   /* Post List */
 
 .post {
+    width: 100%;
     display: flex;
+    align-items: start;
+    justify-content: space-between;
     margin-bottom: 60px;
     column-gap: 30px;
 }
@@ -266,10 +286,26 @@ article h3.trend-title {
     margin-bottom: 63px;
 }
 
+.post-image {
+    flex: 0 0 auto;
+    height: auto;
+    width: 49%;
+    max-height: none;
+    object-fit: contain;
+    background-color: #eff6f1;
+}
+
+.post-content {
+    width: 47%;
+    flex: 1;
+}
+
 .post-tags {
     display: flex;
     gap: 20px;
     flex-direction: row;
+    flex-wrap: wrap;
+    row-gap: 7px;
     justify-content: start;
     margin-top: 0;
     margin-bottom: 0;
@@ -283,12 +319,20 @@ article h3.trend-title {
     text-transform: uppercase;
 }
 
+.post-tag:hover {
+    text-decoration: underline;
+}
+
 .post-title {
     font-weight: bold;
     font-size: 20px;
     text-transform: uppercase;
     padding-top: 7px;
     line-height: 1.25;
+}
+
+.post-title:hover {
+    color: #b59f5b;
 }
 
 .post-meta {
@@ -358,12 +402,20 @@ article h3.trend-title {
     margin-bottom: 22px;
     column-gap: 19px;
     height: 70px;
+    width: 100%;
+}
+
+.new-post-image {
+    width: 26%;
+    background-color: #f4f7f6;
 }
 
 .new-post-content {
     display: flex;
     flex-direction: column;
     gap: 5px;
+    width: 68%;
+    flex: 1;
 }
 
 .new-post-data {
@@ -415,6 +467,10 @@ article h3.trend-title {
     background-repeat: no-repeat;
     background-position: center;
     cursor: pointer;
+}
+
+.search-button:hover {
+    background-color: #323232;
 }
 
 /* Subscribe */
@@ -469,6 +525,10 @@ article h3.trend-title {
     color: white;
     cursor: pointer;
     margin-top: 17px;
+}
+
+.subscribe-button:hover {
+    background-color: #323232;
 }
 
 .subscribe-button-text {
@@ -560,6 +620,10 @@ article h3.trend-title {
     font-weight: bold;
 }
 
+.category-item:hover {
+    color: #b59f5b;
+}
+
 .category-item-count {
     color: #b59f5b;
     vertical-align: super;
@@ -611,12 +675,13 @@ article h3.trend-title {
 .products-container {
     display: flex;
     justify-content: space-between;
+
 }
 
 .product {
     display: flex;
-    max-width: 347px;
     flex-direction: column;
+    width: 346px;
 }
 
 .product-image {
@@ -648,6 +713,10 @@ article h3.trend-title {
     color: #b59f5b;
 }
 
+.product-resume a:hover {
+    text-decoration: underline;
+}
+
 .button-price-shop {
     display: flex;
     justify-content: space-between;
@@ -659,6 +728,10 @@ article h3.trend-title {
     height: 49px;
     background-color: #b59f5b;
     color: #ffffff;
+}
+
+.button-shop:hover {
+    background-color: #323232;
 }
 
 .button-shop-text {
@@ -743,6 +816,7 @@ article h3.trend-title {
 }
 
   /* Popup */
+
   .popup {
     position: fixed;
     top: 0;
@@ -760,11 +834,11 @@ article h3.trend-title {
   .feedback-form {
     position: relative;
     box-sizing: border-box;
-    padding: 50px 30px 50px 30px;
-    margin-top: 236px;
+    padding: 48px 30px 49px 30px;
+    margin-top: 237px;
     background-color: #ffffff;
-    max-width: 390px;
-    min-height: 589px;
+    width: 390px;
+    height: 589px;
   }
 
   .feedback-form::after {
@@ -890,6 +964,11 @@ article h3.trend-title {
     font-size: 13px;
 }
 
+.textarea-item:focus {
+    padding: 16px 20px;
+    border: 1px solid #b59f5b;
+}
+
 .feedback-send {
     width: 100%;
     height: 48px;
@@ -911,13 +990,14 @@ article h3.trend-title {
     display: none;
 }
 
+  /* Tablet */
 
 @media (max-width: 1199px) {
     .header {
         background-image: url("../images/banner-bg-tablet.jpg");
         background-position: left bottom;
-        min-height: 392px;
         padding-top: 43px;
+        min-height: 392px;
     }
 
     .header-content {
@@ -974,12 +1054,10 @@ article h3.trend-title {
 
     .trends-list-item {
         width: calc((100% - 3px) / 2);
-        height: 247px;
-        padding-right: 18px;
+        min-height: 247px;  
     }
 
     .trend-container {
-        width: calc(100%-95px);
         padding: 30px 59px 26px 30px;
         margin-left: 0;
         margin-right: 0;
@@ -990,21 +1068,13 @@ article h3.trend-title {
         margin-bottom: 5px;
     }
 
-    .trend-title {
+    article h3.trend-title {
         font-size: 17px;
     }
 
     .main-aside-content {
-        margin: 0 20px;
+        padding: 50px 36px 59px 31px;
         gap: 35px;
-    }
-    
-    .main-content {
-        width: 56%;
-    }
-
-    .aside-content {
-        width: 39%;
     }
 
     .search-form {
@@ -1036,7 +1106,7 @@ article h3.trend-title {
         margin-bottom: 62px;
     }
 
-    .post:nth-child(n + 2)::before {
+    .post:nth-child(n + 1)::before {
         content: '';
         position: absolute;
         width: 100%;
@@ -1045,7 +1115,13 @@ article h3.trend-title {
         top: -45px;
     }
 
+
     .post-image {
+        padding-left: 3px;
+        width: calc(100% - 3px);
+    }
+
+    .post-content {
         padding-left: 3px;
         width: calc(100% - 3px);
     }
@@ -1053,6 +1129,7 @@ article h3.trend-title {
     .post-tags {
         margin-left: 4px;
         gap: 18px;
+        row-gap: 10px;
     }
 
     .post-title {
@@ -1075,24 +1152,32 @@ article h3.trend-title {
         margin-left: 5px;
     }
 
-    .shop {
-        width: calc(100% - 72px);
-        max-width: 698px;
-        padding: 0;
+    .shop { 
+        padding: 0 35px 51px;
+        margin-left: 0;
+        margin-right: 0;
     }
 
     .products-container {
         flex-wrap: wrap;
         row-gap: 27px;
+        column-gap: 22px;
     }
 
     .product{
-        width: calc((100% - 22px)/ 2);
+        width: calc((100% - 22px) / 2);
     }
 
     .product-image {
-        width: calc(100% - 46px);
-        padding: 0 auto;
+        padding: 0 23px;
+    }
+
+    .product-content {
+        margin-top: -37px;
+    }
+
+    .product-image-item {
+        width: 100%;
     }
 
     .shop-title-content {
@@ -1103,6 +1188,292 @@ article h3.trend-title {
         font-size: 17px;
     }
 
+    .copyright-info {
+        margin-top: 45px;
+    }
 
+    .feedback-form {
+        height: 595px;
+    }
 
+    .feedback-form-title {
+        font-size: 18px;
+        margin-bottom: 24px;
+    }
+
+    .feedback-form-title::after {
+        margin-bottom: 26px;
+    }
+
+    .feedback-form::after {
+        background-size: 27px;
+        width: 27px;
+        height: 27px;
+        top: -36px;
+        right: 1px; 
+    }
+
+    .select-list {
+        background-position: right 15px center;
+        background-size: 9px 17px;
+    }
+
+    .feedback-radio {
+        margin-bottom: 26px;
+    }
+
+    .radio-box {
+        gap: 31px;
+    }
+
+    .radio-item {
+        align-items: center;
+    }
+
+    .radio-input {
+        width: 25px;
+        height: 25px;
+        background-size: 25px;
+    }
+
+    .feedback-textarea {
+        margin-bottom: 0;
+    }
+
+    .textarea-item {
+        height: 131px;
+    }
+
+    .feedback-send {
+        margin-top: 26px;
+    }
+}
+
+  /* Mobile */
+
+@media (max-width: 640px) {
+    .header {
+        background-image: url("../images/banner-mobile.jpg");
+        height: 639px;
+        padding-top: 32px;
+    }
+
+    .header-content {
+        padding: 0 15px;
+    }
+
+    .logo {
+        display: none;
+    }
+
+    a .mobile-logo {
+        margin: 174px auto 0;
+        display: block;
+        max-width: 269px;
+    }
+
+    .caption {
+        font-size: 26px;
+        line-height: 36px;
+        max-width: 280px;
+        width: auto;
+        padding-right: 0;
+        padding-left: 4px;
+        margin-top: 30px;
+    }
+
+    .trends-title {
+        font-size: 16px;
+        margin-top: 39px;
+    }
+
+    article h3 .trend-title {
+        font-size: 16px;
+    }
+
+    .trends-content {
+        flex-direction: column;
+    }
+
+    .trends-list-item {
+        width: 100%;
+        min-height: 231px;
+        padding: 15px;
+    }
+
+    .trend-container {
+        padding: 33px 25px 31px 18px;
+    }
+
+    .trends-title-content {
+        font-size: 16px;
+    }
+
+    .trends-title-content::after {
+        margin-bottom: 25px;
+    }
+
+    .main-aside-content {
+        flex-wrap: wrap;
+        gap: 67px;
+        padding: 44px 15px 57px 15px;
+    }
+
+    .main-content {
+        width: 100%;
+    }
+
+    .post {
+        row-gap: 12px;
+        margin-bottom: 58px;
+    }
+
+    .post-title {
+        font-size: 16px;
+        line-height: 20px;
+        margin-top: 3px;
+        margin-bottom: 18px;
+    }
+
+    .post-meta {
+        margin-top: 0;
+        margin-bottom: 14px;
+    }
+
+    .post-resume {
+        margin-top: 0;
+        margin-left: 3px;
+    }
+
+    .post:nth-child(n + 1)::after {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 3px;
+        background-color: #eeeeee;
+        bottom: -23px;
+    }
+
+    .post:nth-child(n + 2)::before {
+        content: none;
+    }
+
+    .aside-content {
+        width: 100%;
+        max-width: 100%;
+        align-items: center;
+    }
+
+    .new-post-image {
+        width: 70px;
+    }
+
+    .new-post-content {
+        width: calc(100% - 89px);
+    }
+
+    .search-form {
+        max-width: 330px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .subscribe {
+        margin-top: 38px;
+    }
+
+    .subscribe-form {
+        max-width: 330px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .tags {
+        margin-top: 38px;
+    }
+
+    .tags-list {
+        max-width: 330px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .categories {
+        margin-top: 38px;
+    }
+
+    .categories-list {
+        max-width: 330px;
+        margin-left: auto;
+        margin-right: auto;
+        gap: 24px;
+    }
+
+    .shop {
+        padding: 0 15px;
+        margin-bottom: 41px;
+    }
+
+    .products-container {
+        flex-direction: column;
+    }
+
+    .product{
+        width: 100%;
+    }
+
+    .popup {
+        width: auto;
+        padding: 0 15px;
+    }
+
+    .feedback-form {
+        height: 546px;
+        padding: 25px 27px 30px 24px;
+        margin-top: 56px;
+    }
+
+    .feedback-form::after {
+        top: -32px;
+        right: 1px;
+    }
+
+    .feedback-form-title {
+        font-size: 16px;
+        margin-bottom: 28px;
+    }
+
+    .feedback-form-title::after {
+        top: 31px;
+    }
+
+    .radio-box {
+        gap: 33px;
+    }
+}
+
+/* Orientation Landscape */
+
+@media (min-width: 641px) and (max-width: 1199px) and (orientation: landscape) {
+    .trends-list-item {
+        width: calc((100% - 12px) / 4);
+    }
+
+    .trend-container {
+        padding: 26px;
+    }
+}
+
+@media (max-width: 640px) and (orientation: landscape) {
+    .trends-content {
+        flex-direction: row;
+    }
+
+    .trends-list-item {
+        width: calc((100% - 3px) / 2);
+    }
+
+    .trend-container {
+        padding: 18px;
+    }
 }
